--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,13 +1,35 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="login-content" fullscreen>
+  <div class="login-card">
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <h1 class="login-title">Iniciar Sesión</h1>
+
+    <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+
+      <app-input 
+        label="Correo" 
+        type="email" 
+        formControlName="email">
+      </app-input>
+      
+      <app-input 
+        label="Contraseña" 
+        type="password" 
+        formControlName="password">
+      </app-input>
+
+      <app-button 
+        type="submit" 
+        label="Ingresar">
+      </app-button>
+
+      <app-link 
+        text="¿No tienes cuenta? Regístrate" 
+        [routerLink]="['/register']">
+      </app-link>
+
+      <div *ngIf="errorMsg" class="error">
+        {{ errorMsg }}
+      </div>
+    </form>
+  </div>
 </ion-content>
