--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,13 +1,43 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>register</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="ion-padding">
+  <div class="register-card">
+    <h1 class="ion-text-center">Registro</h1>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">register</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <form (ngSubmit)="register()">
+      
+      <app-input
+        label="Correo"
+        type="email"
+        [(ngModel)]="email"
+        name="email">
+      </app-input>
+
+      <app-input
+        label="Contraseña"
+        type="password"
+        [(ngModel)]="password"
+        name="password">
+      </app-input>
+
+      <app-input
+        label="Confirmar contraseña"
+        type="password"
+        [(ngModel)]="confirmPassword"
+        name="confirmPassword">
+      </app-input>
+
+      <div class="ion-margin-top">
+        <app-button
+          type="submit"
+          label="Registrarse">
+        </app-button>
+      </div>
+
+      <div class="ion-text-center ion-margin-top">
+        <app-link
+          text="¿Ya tienes cuenta? Inicia sesión"
+          [routerLink]="['/login']">
+        </app-link>
+      </div>
+    </form>
+  </div>
 </ion-content>
