--- a/src/app/shared/components/link/link.component.html
+++ b/src/app/shared/components/link/link.component.html
@@ -1,3 +1,13 @@
-<p>
-  link works!
-</p>
+<a *ngIf="href && !routerLink"
+   [href]="href"
+   class="custom-link"
+   (click)="onClick($event)">
+  {{ text }}
+</a>
+
+<a *ngIf="routerLink"
+   [routerLink]="routerLink"
+   class="custom-link"
+   (click)="onClick($event)">
+  {{ text }}
+</a>
