--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -1,5 +1,5 @@
 ion-content {
-  --background: #ff4458;
+  --background: #fc4c64; 
   display: flex;
   justify-content: center;
   align-items: center;
@@ -44,4 +44,11 @@ app-link {
   color: #fff;
   font-size: 0.85rem;
   margin-top: 10px;
+}
+
+.tinder-logo {
+  width: 160px;   
+  height: auto;
+  display: block;
+  margin: 60px auto 30px auto;
 }
