--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,9 +1,9 @@
 <ion-button
   [type]="type"
   [expand]="expand"
-  [color]="color"
   [disabled]="disabled"
-  (click)="onClick()">
+  (click)="onClick()"
+  [ngClass]="color">
   {{ label }}
   <ng-content></ng-content>
 </ion-button>
