--- a/src/app/shared/components/input/input.component.scss
+++ b/src/app/shared/components/input/input.component.scss
@@ -5,23 +5,25 @@
 
 ion-item {
   --background: transparent;
+  --ion-item-background: transparent;
   --border-color: transparent;
   --highlight-color-focused: transparent;
   --min-height: 40px;
-  border-bottom: 1px solid white; 
+  border-bottom: 1px solid #ff385c; 
   margin: 8px 0;
 }
 
 ion-label {
-  color: white !important;
+  color: #333 !important;
   font-size: 14px;
 }
 
 ion-input {
-  color: white;
+  color: #111;
   --padding-start: 0;
+  --background: transparent;
 }
 
 ion-input::placeholder {
-  color: #fce1e4; 
+  color: #ff9fb1; 
 }
