--- a/src/global.scss
+++ b/src/global.scss
@@ -34,4 +34,5 @@
 
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
-@import "@ionic/angular/css/palettes/dark.system.css";
+/* For a Figma-like light theme, keep dark mode disabled during dev */
+/* @import "@ionic/angular/css/palettes/dark.system.css"; */
